[package]
name = "simple-async-cache-rs"
version = "0.1.0"
authors = ["merlleu <mrerl@warlegend.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features=["sync", "time", "rt"]}

[dev.dependencies]
tokio = {version = "1", features = ["full"]}