[package]
name = "simple-async-cache-rs"
version = "0.3.3"
authors = ["merlleu <mrerl@warlegend.net>"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]
description = "A fast asynchronous caching crate with expiration delay and custom types."
repository = "https://github.com/merlleu/simple-async-cache-rs"
readme = "README.md"
license = "MIT"


[dependencies]
tokio = {version = "1", features=["sync", "time", "rt"]}

